--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,11 @@ html {
   margin: 0px;
   color: white;
   background-color: #4A412A;
+.wrapper{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+}
 }
 a {
   color: white
@@ -29,25 +34,48 @@ p{
   padding: 0px;
   margin: 0px;
 }
-.sec1{
+.top{
   padding-top: 5px;
   padding-left: 10px;
   padding-bottom: 10px;
   margin: 0px;
   background-color: #9F9A8F;
   height: auto;
-  line-height: 15px;
+  line-height: 25px;
+}
+.container{
+  height: auto;
+  position: relative;
+  background-color: #9F9A8F;
 }
 .greebles{
   margin: 0px;
   background-color: #9F9A8F;
   height: auto;
-  line-height: 15px;
-  padding: 0;
+  line-height: 20px;
+  padding-top: 20px;
+  font-size: 20pt;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 }
-.sec3{
+.tools{
   margin: 0px;
   padding: 5px;
+  font-size: 15pt;
+  background-color: #68604d;
+}
+.ingred{
+  margin: 0px;
+  padding: 5px;
+  font-size: 15pt;
+  background-color: #68604d;
+}
+.direc{
+  margin: 0px;
+  padding: 5px;
+  font-size: 15pt;
+  background-color: #68604d;
 }
 figure{
   margin: 0px;
@@ -59,5 +87,11 @@ hr{
 form{
   padding-left: 15px;
 }
-
+.lbr{
+  display: block;
+  margin: 40px;
+}
+.conv{
+  margin-bottom: 150px;
+}
 }
